--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,6 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
-
+NODE_ENV=string
 TURSO_CONNECTION_URL=string
 TURSO_AUTH_TOKEN=string
