--- a/package.json
+++ b/package.json
@@ -24,18 +24,27 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.3",
+    "html-react-parser": "^5.1.9",
     "lucide-react": "^0.359.0",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-grid-layout": "^1.4.4",
     "react-resizable": "^3.0.5",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "remark-stringify": "^11.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.4",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
@@ -44,6 +53,7 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-resizable": "^3.0.7",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
