--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ NODE_ENV=string
 TURSO_CONNECTION_URL=string
 TURSO_AUTH_TOKEN=string
 PADDLE_API_KEY=string
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=string
+CLERK_SECRET_KEY=string
