--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "remark-class-names": "^0.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   },
